--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@nivo/bar": "^0.66.0",
     "@nivo/core": "^0.65.0",
     "@nivo/pie": "^0.65.1",
     "@testing-library/jest-dom": "^4.2.4",
